fixed history alignment issue

--- a/src/screens/History/History.css
+++ b/src/screens/History/History.css
@@ -106,6 +106,19 @@
   margin-top: 10px;
 }
 
+.filter-container {
+  justify-content: center;
+  gap: 10px;
+}
+
+.filter-container label {
+  /*justify the text to the center of the input*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
 .close-modal-button:hover {
   background-color: #0056b3;
 }
